# iracing-telemetry

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
backend/src/: lib.rs  main.rs
backend/src/network/: mod.rs  server.rs
backend/src/provider/: mock.rs
backend/src/ui/: cli.rs  mod.rs
docs/adrs/: 0001-language-choice-rust-vs-csharp.md  0002-iracing-sdk-choice-pitwall.md  0003-async-strategy-tokio-runtime.md  0004-web-socket-broker.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/electron/: main.ts  preload.ts
scripts/: build-windows.sh
src/: lib.rs  main.rs
src/provider/: iracing.rs  mock.rs  mod.rs
src/ui/: cli.rs  wsgauge.rs  wstelemetry.rs
