[package]
name = "iracing-telemetry"
version = "0.1.0"
edition = "2021"
authors = ["Muratcan Celayir"]
description = "A high-performance, lightweight telemetry overlay for iRacing built in Rust."

[dependencies]
# pitwall: The bridge to iRacing memory
pitwall = { version = "0.1", features = ["derive"] }

# tracing: added as pitwall dependency
tracing = "0.1.44"

# tokio: Allows us to do things in the background (Async)
tokio = { version = "1.0", features = ["full"] }

# futures: Helps handle the "stream" of data from the car
futures = "0.3"

# serde: Will help us "serialize" data to JSON for our UI later
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# colored: for formatting the output with colors
colored = "3.0"

# async-trait:
async-trait = "0.1.89"